--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ img {
 
 /* Responsive Styling */
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 400px) {
     #nav {
         height: 5.25rem;
         width: 100%;
@@ -159,7 +159,7 @@ img {
     }
 }
 
-@media only screen and (max-width: 900px) {
+/* @media only screen and (max-width: 900px) {
     #nav {
         height: 5.25rem;
         width: 100%;
@@ -201,10 +201,10 @@ img {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%); */
-        display: flex;
+        /* display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 20px;
     }
     
-  }
+  }  */
