--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ img {
 
 /* Responsive Styling */
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
     #nav {
         height: 5.25rem;
         width: 100%;
@@ -159,7 +159,7 @@ img {
     }
 }
 
-/* @media only screen and (max-width: 900px) {
+ @media only screen and (min-width: 500px) {
     #nav {
         height: 5.25rem;
         width: 100%;
@@ -189,22 +189,22 @@ img {
     }
     
     #hero-section h1 {
-        font-size: 5.9rem;
+        font-size: 3.4rem;
         text-transform: uppercase;
     }
     
     img {
-        height: 21.875rem;
-        width: 18.125rem;
+        height: 19.875rem;
+        width: 17.125rem;
         object-fit: cover;
         /* position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%); */
-        /* display: flex;
+        display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 20px;
     }
     
-  }  */
+  } 
